--- a/src/main/res/layout-land/activity_home.xml
+++ b/src/main/res/layout-land/activity_home.xml
@@ -7,18 +7,20 @@
     android:background="@drawable/backgrund">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/home_logo_demineur"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:contentDescription="@string/todo"
-        android:id="@+id/imageView" />
+        android:src="@drawable/home_logo_demineur" />
 
     <Button
         android:id="@+id/button"
         style="@android:style/Widget.Holo.Button.Toggle"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="185dp"
+        android:layout_height="50dp"
         android:layout_alignLeft="@+id/button2"
         android:layout_alignStart="@+id/button2"
         android:layout_below="@+id/imageView"
@@ -30,12 +32,12 @@
     <Button
         android:id="@+id/button2"
         style="@android:style/Widget.Holo.Button.Toggle"
-        android:layout_width="198dp"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/button3"
         android:layout_alignStart="@+id/button3"
         android:layout_below="@+id/button"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="16dp"
         android:text="Reprendre"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="93dp"
@@ -44,11 +46,10 @@
     <Button
         android:id="@+id/button3"
         style="@android:style/Widget.Holo.Button.Toggle"
-        android:layout_width="195dp"
+        android:layout_width="185dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button2"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="57dp"
         android:text="@string/score"
         tools:ignore="HardcodedText,MissingConstraints"
         tools:layout_editor_absoluteX="95dp"
