--- a/src/main/res/layout-land/activity_nouvelle_partie.xml
+++ b/src/main/res/layout-land/activity_nouvelle_partie.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_NovellePartie"
+    android:id="@+id/activity_accueil"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.combo.demineur.NouvellePartie">
+    tools:context="com.example.combo.demineur.DifficulteActivity">
+
+    <TextView
+        android:text="@string/instruction_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/instruction_content_textView"
+        style="@style/ContentText"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+        android:textSize="14sp"
+        android:layout_alignParentLeft="true" />
 
     <TextView
         android:text="@string/instruction_title"
@@ -28,13 +39,4 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:text="@string/instruction_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/instruction_content_textView"
-        style="@style/ContentText"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true" />
 </RelativeLayout>
