--- a/src/main/res/layout-land/activity_scores.xml
+++ b/src/main/res/layout-land/activity_scores.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.combo.demineur.Scores">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="128dp"
-        android:layout_height="32dp"
-        android:text="Scores"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:ignore="MissingConstraints" />
+    <ListView
+        android:id="@+id/listView_scores"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
