--- a/src/main/res/layout/activity_game.xml
+++ b/src/main/res/layout/activity_game.xml
@@ -27,13 +27,16 @@
         android:layout_alignParentLeft="true">
 
         <Switch
-            android:text="@string/flag"
+            android:id="@+id/flag_Switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_alignBaseline="@+id/gameRestart_Button"
+            android:layout_alignBottom="@+id/gameRestart_Button"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:id="@+id/flag_Switch"
-            android:layout_alignParentLeft="true" />
+            android:layout_marginLeft="11dp"
+            android:layout_marginStart="11dp"
+            android:text="@string/flag" />
 
         <Button
             android:text="@string/restart"
@@ -44,6 +47,15 @@
             android:id="@+id/gameRestart_Button"
             android:onClick="recommencer"
             android:layout_alignParentRight="true" />
+
+        <Chronometer
+            android:id="@+id/chronometer"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+
     </RelativeLayout>
 
 </RelativeLayout>
